--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,26 +1,122 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/configuration-reference
 version: 2.1
 
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/configuration-reference/#jobs
 jobs:
-  say-hello:
-    # Specify the execution environment. You can specify an image from Docker Hub or use one of our convenience images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/configuration-reference/#executor-job
+ build:
+  docker:
+    - image: circleci/node:20.7.0
+  working_directory: ~/repo
+  steps:
+    - checkout
+    - run:
+        name: Show current branch
+        command: echo ${CURRENT_BRANCH}
+    - restore_cache:
+        key:
+          - app-{{ checksum "package,json" }}
+          - app-
+    - run:
+        name: Install dependies
+        command: npm install      
+
+    - save_cache:
+        paths:
+          - node_modules
+        key: app-{{ cheksum "package.json" }}
+
+  deploy-to-aws-s3:
     docker:
-      - image: cimg/base:stable
-    # Add steps to the job
-    # See: https://circleci.com/docs/configuration-reference/#steps
+      - image: circle/node:20.7.0
+    working_directory: ~/repo
     steps:
       - checkout
       - run:
-          name: "Say hello"
-          command: "echo Hello, World!"
-
-# Orchestrate jobs using workflows
-# See: https://circleci.com/docs/configuration-reference/#workflows
+        name: Show current branch
+        command; echo ${CURRENT_BRANCH}
+      - run:
+        name: Installinh AWS CLI
+        working_directory: /
+        command: |
+          sudo apt-get -y -qq update
+          sudo apt-get install -y awscli
+          sudo apt-get install -y python-pip python-dev build-essential
+      - run:
+        name: Build Project
+        command:
+          npm install
+          npm run build
+          cd build
+          zip ../build.zip -r * .[^.]*
+          echo "Build successfully"
+      -run:
+        name: Deply to AWS S3
+        command: |
+          if ["${CURRENT_BRANCH}" == "master" ]
+          then
+            aws--region ${AWS_REGION} s3 sync ~/repo/builds£://${AWS_BUCKET_PRODUCTION} --delete
+          elif ["${CURRENT_BRANCH}" == "staging" ]
+          then
+            aws--region ${AWS_REGION} s3 sync ~/repo/builds£://${AWS_BUCKET_STAGING} --delete
+          else
+             aws--region ${AWS_REGION} s3 sync ~/repo/builds£://${AWS_DEV_BUCKET} --delete
+          fi
+          
+  deploy-to-aws-cloudfront:
+    docker:
+      - image: circle/node:20.7.0
+    working_directory: ~/repo
+    steps:
+      - checkout
+      - run:
+        name: Show current branch
+        command; echo ${CURRENT_BRANCH}
+      - run:
+        name: Installinh AWS CLI
+        working_directory: /
+        command: |
+          sudo apt-get -y -qq update
+          sudo apt-get install -y awscli
+          sudo apt-get install -y python-pip python-dev build-essential
+      - run:
+        name: Build Project
+        command:
+          npm install
+          npm run build
+          cd build
+          zip ../build.zip -r * .[^.]*
+          echo "Build successfully"
+      -run:
+        name: Deply to AWS Cloudfront
+        command: |
+          aws configure set preview.cloudfront
+          if ["${CURRENT_BRANCH}" == "master" ]
+          then
+            aws cloudfront create-invalidation --distribution-id ${PRODUCTION_DISTRIBUTION_ID} --paths ? /\*
+          elif ["${CURRENT_BRANCH}" == "staging" ]
+          then
+            aws cloudfront create-invalidation --distribution-id ${STAGING_DISTRIBUTION_ID} --paths ? /\*
+          else
+             aws cloudfront create-invalidation --distribution-id ${DEV_DISTRIBUTION_ID} --paths ? /\*
+          fi
 workflows:
-  say-hello-workflow:
+  build_and_deploy:
     jobs:
-      - say-hello
+      - build
+      - deploy-to-aws-s3:
+          requires:
+            - build
+          filters:
+            branches:
+              only:
+                - develop
+                - staging
+                - master          
+      - deploy-to-aws-cloudfront:
+          requires:
+            - deploy-to-aws-s3
+          filters:
+            branches:
+              only:
+                - develop
+                - staging
+                - master
+               
