--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,8 +11,7 @@ jobs:
           name: Show current branch
           command: echo $CURRENT_BRANCH
       - restore_cache:
-          key:
-            - app-{{ checksum "package.json" }}
+          key: app-{{ checksum "package.json" }}
       - run:
           name: Installing dependencies
           command: npm install
@@ -20,7 +19,6 @@ jobs:
           paths:
             - node_modules
           key: app-{{ checksum "package.json" }}
-
   deploy-to-aws-s3:
     docker:
       - image: circleci/node:20.7.0
