--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -72,8 +72,8 @@ jobs:
           working_directory: /
           command: |
             sudo apt-get -y -qq update
-            sudo apt-get install -y awscli
-            sudo apt-get install -y python-pip python-dev build-essential
+            sudo apt-get install -y awscliv2
+            sudo apt-get install -y python3-pip python-dev build-essential
       - run:
           name: Build Project
           command: |
