--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ executors:
     working_directory: ~/repo
   slack-executor:
     docker:
-      - image: 'cibuild/base:latest'
+      - image: 'cimg/base:stable'
     resource_class: small
 
 aliases:
@@ -138,7 +138,7 @@ jobs:
                 },
                   {
                   "type": "section",
-                  fields: [
+                  "fields": [
                     {
                       "type": "mrkdwn",
                       "text": "*Project*:\n$CIRCLE_PROJECT_REPONAME"
@@ -158,7 +158,7 @@ jobs:
                     {
                       "type": "mrkdown",
                       "text": "*Author*:\n$CIRCLE_PROJECT_USERNAME"
-                    },
+                    }
                   ]
                 },
                 {
