--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,8 +14,8 @@ executors:
 aliases:
   - &show-current-branch-name
     run:
-          name: Show current branch
-          command: echo $CIRCLE_BRANCH
+      name: Show current branch
+      command: echo $CIRCLE_BRANCH
   - &restore-cache
     restore_cache:
           keys:
@@ -129,9 +129,9 @@ jobs:
             {
               "blocks": [
                 {
-                  "type": "header"
+                  "type": "header",
                   "text": {
-                    "type": "plain test",
+                    "type": "plain_text",
                     "text": "${CIRCLE_BRANCH} branch deployment to aws s3 and cloudfront is complete. 👍",
                     "emoji": true
                   }
