--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -123,7 +123,7 @@ jobs:
       - run: echo "slack notification"
       - slack/notify:
           event: 'always'
-          channel: 'cinema-circle'
+          channel: 'cinema-circleci'
           template: ''
           custom: |
             {
