added prettier and prettier job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -144,19 +144,19 @@ jobs:
                       "text": "*Project*:\n$CIRCLE_PROJECT_REPONAME"
                     },
                     {
-                      "type": "mrkdown",
+                      "type": "mrkdwn",
                       "text": "*Branch*\n$CIRCLE_BRANCH"
                     },
                     {
-                      "type": "mrkdown",
+                      "type": "mrkdwn",
                       "text": "*when*:\n$(date +'%m/%d/%Y %T')"
                     },
                     {
-                      "type": "mrkdown",
+                      "type": "mrkdwn",
                       "text": "*Build*:\n$CIRCLE_BUILD_NUM"
                     },
                     {
-                      "type": "mrkdown",
+                      "type": "mrkdwn",
                       "text": "*Author*:\n$CIRCLE_PROJECT_USERNAME"
                     }
                   ]
